New values files have been added for different envs.

--- a/python-app/template/charts/${{ values.app_name }}/values.yaml
+++ b/python-app/template/charts/${{ values.app_name }}/values.yaml
@@ -1,8 +1,8 @@
-replicaCount: 1
+# replicaCount: 1
 image:
-  repository: asadhanif3188/python-with-argocd
+  repository: asadhanif3188/${{ values.app_name }}
   pullPolicy: IfNotPresent
-  tag: "aa2b6f"
+  tag: ${{ values.app_name }}-${{ values.app_env }}-latest
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
@@ -23,7 +23,7 @@ ingress:
   className: "nginx"
   annotations: {}
   hosts:
-    - host: python-app.test.com
+    - host: ${{ values.app_name }}-${{ values.app_env }}.test.com
       paths:
         - path: /
           pathType: Prefix
