--- a/python-app/template/mkdocs.yaml
+++ b/python-app/template/mkdocs.yaml
@@ -1,6 +1,6 @@
-site_name: 'Python-App'
-site_description: 'Main documentation for python app.'
-repo_url: https://github.com/asadhanif3188/Python-App-with-ArgoCD
+site_name: '${{ values.app_name }}'
+site_description: 'Main documentation for ${{ values.app_name }}.'
+repo_url: https://github.com/asadhanif3188-mlops/${{ values.app_name }}
 edit_uri: edit/main/docs
 
 plugins:
