--- a/python-app/template/.github/workflows/${{ values.app_name }}-cicd.yaml
+++ b/python-app/template/.github/workflows/${{ values.app_name }}-cicd.yaml
@@ -59,6 +59,34 @@ jobs:
           chmod +x argocd
           sudo mv ./argocd /usr/local/bin/argocd
 
+      - name: Login to argocd
+        shell: bash
+        run: |
+          argocd login argocd-server.argocd \
+            --insecure  \
+            --grpc-web \
+            --username admin \
+            --password  ${{ '${{ secrets.ARGOCD_PASSWORD }}' }}
+
+      - name: Ensure argocd repo and app exist
+        shell: bash
+        run: |
+
+          # Connects the argocd repo
+          repo="https://github.com/asadhanif3188-mlops/${{values.app_name}}.git"
+          argocd repo list | grep -q $repo || argocd repo add $repo
+
+          # Creates the argocd app
+          argocd app get ${{values.app_name}} || argocd app create ${{values.app_name}} \
+            --repo $repo \
+            --path charts/${{values.app_name}} \
+            --dest-namespace ${{values.app_env}} \
+            --dest-server https://kubernetes.default.svc \
+            --values values-${{values.app_env}}.yaml \
+            --revision master \
+            --sync-policy manual \
+            --sync-option CreateNamespace=true
+
       - name: Argocd app sync
         shell: bash
         run: |
